# super-resolution

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in
.github/workflows/: python-app.yml
src/super_resolution/: __init__.py  datamodule.py  lightning_module.py  losses.py  transforms.py
src/super_resolution/datasets/: __init__.py  base.py  image.py  laion_hd.py
src/super_resolution/modeling/: __init__.py  discriminator.py
src/super_resolution/modeling/swin2sr/: __init__.py  model.py
src/super_resolution/scripts/: __init__.py  download_hf.py  train.py
